# -

./: .gitignore  package-lock.json  package.json  schemes_ISB.html  Доклад_ИСБ_МСБр.md  Речь_для_защиты.md
docs/: pr-members-architecture.md
gpu-miner/: Dockerfile  README.md
gpu-miner/patches/: Mode.cpp  Mode.hpp  profanity.cl  profanity.cpp
gpu-miner/scripts/: gen-key.py  run.sh  verify.py
miner/: Cargo.toml  README.md
miner/src/: main.rs
public/: gasification-scheme.md  pechat.docx  vik-audit.md  vik-document.md  vik-work.md
src/app/: global-error.tsx  globals.css  layout.tsx  page.tsx
src/app/api/check-token/: route.ts
src/app/api/market-cap/: route.ts
src/components/game/: ClickCounter.tsx  ComboMeter.tsx  FloatingNumbers.tsx  HpBar.tsx  MarketCapBar.tsx  PhrasePopup.tsx  PillButton.tsx  RageOverlay.tsx  SidePhrases.tsx  WalletChecker.tsx
src/components/shop/: ShopPanel.tsx  UpgradeCard.tsx
src/data/: phrases.ts
src/hooks/: useAutoClicker.ts  useComboDecay.ts
src/lib/: upgrades.ts
src/store/: gameStore.ts
src/store/slices/: clickSlice.ts  comboSlice.ts  prestigeSlice.ts  shopSlice.ts  uiSlice.ts
src/types/: game.ts
